# stormdesk

./: Cargo.toml  build.rs  vcpkg.json
.github/workflows/: ci-windows.yml  ci.yml
stormdesk/: README.md
stormdesk/branding/: README.md  appname.txt  colors.md
stormdesk/branding/icons/: placeholder.txt
stormdesk/ci/.github/workflows/: build.yml
stormdesk/installer/macos/: create-dmg.sh
stormdesk/installer/windows/: StormDesk.iss
stormdesk/patches/: branding.patch
stormdesk/scripts/: apply_stormdesk_branding.ps1  apply_stormdesk_branding.sh  build_linux.sh  build_macos.sh  build_windows.ps1  set_server_endpoints.ps1  set_server_endpoints.sh
stormdesk/server/: README.md  docker-compose.yml  env.sample
