[package]
name = "stormdesk"
version = "1.0.0"
edition = "2021"
authors = ["StormDesk Contributors"]

[dependencies]
# Dependências principais
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

# GUI e desktop
sciter-rs = "0.5"
tao = { git = "https://github.com/rustdesk-org/tao" }
tray-icon = { git = "https://github.com/tauri-apps/tray-icon" }

# Utilitários e libs nativas
parking_lot = "0.12"
lazy_static = "1"
sysinfo = { git = "https://github.com/rustdesk-org/sysinfo" }
machine-uid = { git = "https://github.com/rustdesk-org/machine-uid" }
default-net = { git = "https://github.com/rustdesk-org/default_net" }
keepawake = { git = "https://github.com/rustdesk-org/keepawake-rs" }
arboard = { git = "https://github.com/rustdesk-org/arboard" }

# Áudio, vídeo e streaming
cpal = { git = "https://github.com/rustdesk-org/cpal", branch = "master" }
magnum-opus = { git = "https://github.com/rustdesk-org/magnum-opus" }
libloading = "0.8"

# Rede e IPC
tokio-socks = { git = "https://github.com/rustdesk-org/tokio-socks" }
parity-tokio-ipc = { git = "https://github.com/rustdesk-org/parity-tokio-ipc" }

# Criptografia
ring = "0.17"
sha2 = "0.10"
hmac = "0.12"

# Cross-platform
rdev = { git = "https://github.com/rustdesk-org/rdev" }
enigo = "0.1"
os_version = "0.2"

# Somente Windows
winapi = { version = "0.3", features = ["winuser", "wtsapi32", "processthreadsapi"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_SystemServices"] }

# Somente Mac
core-foundation = "0.9"
cacao = { git = "https://github.com/clslaid/cacao" }

[build-dependencies]
cc = "1.0"
winres = "0.1"

[features]
default = []
screencapturekit = ["cpal/screencapturekit"]

[profile.release]
opt-level = "z"
lto = true
strip = true
